--- a/index.html
+++ b/index.html
@@ -15,5 +15,40 @@
         </ul>
     </nav>
     <h2>Welcome to Trading Bull</h2>
+    <p><strong>Begin Your Trading Journey With Ease</strong></p>
+
+    <div>
+      <h4>Technologies</h4>
+      <p>
+        At Trading Bull, we support various technologies such as Forex, MT4, MT5, TradingView etc.
+        These technologies can be accessed anytime, anywhere, on any device using Trading Bull.
+        Although Trading Bull focuses its programs around Forex, all technologies are supported fully.
+      </p>
+    </div>
+
+    <div>
+      <h4>Market Executions:</h4>
+      <ul>
+        <li>Stackinhg</li>
+        <li>Hedging</li>
+        <li>Sell stop Order</li>
+        <li>Buy stop Order</li>
+        <li>Limit Orders</li>
+      </ul>
+    </div>
+
+    <div>
+      <h4>What We Offer</h4>
+      <p><strong>Trading Bull offers courses on:</strong></p>
+      <ul>
+        <li>Forex</li>
+        <li>Forms of CandleSticks</li>
+        <li>Supply/Resistances</li>
+        <li>Overlapping/Gapping</li>
+        <li>Touching/Valleys & Peaks</li>
+      </ul>
+    </div>
+
+
 </body>
 </html>
