--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home Page</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="index.html" target="_blank">Home Page</a></li>
+            <li><a href="about.html" target="_blank">About Us</a></li>
+            <li><a href="contact.html" target="_blank">Contact Us</a></li>
         </ul>
     </nav>
     <h2>Welcome to Trading Bull</h2>
