--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,12 @@
 <body>
     <nav>
         <ul>
-            <li><a href="Index.html">Home Page</a></li>
-            <li><a href="About.html">About Us</a></li>
-            <li><a href="Contact.html">Contact Us</a></li>
+            <li><a href="index.html" target="_blank">Home Page</a></li>
+            <li><a href="about.html" target="_blank">About Us</a></li>
+            <li><a href="contact.html" target="_blank">Contact Us</a></li>
         </ul>
     </nav>
+    
     <input type="text" id="searchbar"> <button type="button">search</button>
     <h4>Contact Us</h4>
     <p>You can contact us if there is any problem with your trade</p><br>
@@ -45,6 +46,6 @@
         <li>To Free: +2010074631</li>
         <li>support@tradingbullegypt.com</li>
     </ul>
-    <p>@ Copyright tradingbull</p>s
+    <p>@ Copyright tradingbull</p>
 </body>
 </html>
