--- a/about.html
+++ b/about.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html" target="_blank">Home Page</a></li>
+            <li><a href="about.html" target="_blank">About Us</a></li>
+            <li><a href="contact.html" target="_blank">Contact Us</a></li>
+        </ul>
+    </nav>
    <h1>About Trading Bull </h1>
    <p>We established our company in 2022. We saw a huge gap in the market that caused people to get scammed. So we took it op on ourselves to provide people with the right knowledge and power in their own hands to conquer the market. </p>
    <h2>Are you interested in Forex Trading?</h2>
